src/objects/CVMA_Announcement__c/CVMA_Announcement__c.object-meta.xml
<CustomObject>
    <label>CVMA Announcement</label>
    <nameField>
        <displayFormat>ANN-{000000}</displayFormat>
        <label>Announcement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVMA Announcements</pluralLabel>
    <sharingModel>Private</sharingModel>
    
    <!-- Title Field -->
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    
    <!-- Content Field -->
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <!-- Priority Field -->
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Category Field -->
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Rides</fullName>
                </value>
                <value>
                    <fullName>Brotherhood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Author Field -->
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Created Announcements</relationshipLabel>
        <relationshipName>Created_Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Target Audience Field -->
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Members</fullName>
                    <default>true</default>
                    <label>All Members</label>
                </value>
                <value>
                    <fullName>Officers Only</fullName>
                </value>
                <value>
                    <fullName>Full Members</fullName>
                </value>
                <value>
                    <fullName>Associate Members</fullName>
                </value>
                <value>
                    <fullName>Prospects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Status Field -->
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Publish Date Field -->
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    
    <!-- Expiration Date Field -->
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    
    <!-- Emergency Flag Field -->
    <fields>
        <fullName>Is_Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Announcement</label>
        <type>Checkbox</type>
    </fields>
    
    <!-- Email Notification Field -->
    <fields>
        <fullName>Send_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Notification</label>
        <type>Checkbox</type>
    </fields>
    
    <!-- View Count Field -->
    <fields>
        <fullName>View_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Banner Image URL Field -->
    <fields>
        <fullName>Banner_Image_URL__c</fullName>
        <label>Banner Image URL</label>
        <type>Url</type>
    </fields>
    
</CustomObject>