src/objects/CVMA_Announcement__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Created Announcements</relationshipLabel>
    <relationshipName>Created_Announcements</relationshipName>
    <type>Lookup</type>
</CustomField>