src/objects/CVMA_Announcement__c/fields/Is_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Is_Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Announcement</label>
    <type>Checkbox</type>
</CustomField>