src/objects/CVMA_Announcement__c/fields/Send_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Notification</label>
    <type>Checkbox</type>
</CustomField>