src/objects/CVMA_Announcement__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Members</fullName>
                <default>true</default>
                <label>All Members</label>
            </value>
            <value>
                <fullName>Officers Only</fullName>
            </value>
            <value>
                <fullName>Full Members</fullName>
            </value>
            <value>
                <fullName>Associate Members</fullName>
            </value>
            <value>
                <fullName>Prospects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>